# orbit-ai

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: check.yml
app/: daily.py  latency.py  main.py  paths.py  text.py
app/actions/: __init__.py  dispatcher.py  drafts.py  local_tasks.py  reminders.py
app/ai/: app_server_backend.py  app_server_rpc.py  app_server_stream.py  backend_factory.py  end_judge_agent.py  ollama_backend.py  proactive_agent.py  prompt_builder.py  response_agent.py  streaming.py  turn_analysis_agent.py
app/autonomous/: __init__.py  providers.py  reminders.py  runtime.py  scheduler.py
app/cli/: __init__.py  commands.py  display.py  options.py  progress.py  runtime.py
app/config/: autonomy.py  loader.py  permission_policy.py
app/io/: stt.py  voice.py  voice_config.py  voice_input.py  voice_output.py
app/memory/: extractor.py  merger.py  models.py  retriever.py  schema.sql  store.py  summarizer.py  utils.py
app/session/: end_detector.py  grounding.py  lifecycle.py  manager.py  proactive_policy.py  resume_point.py  startup_briefing.py  (+3 more)
config/: autonomous.json  autonomy.json  permission_policy.json  pet.json  proactive.json  profile.json
docs/: ARCHITECTURE.md  DEMO.md  OPENAI_OSS_APPLICATION.md  PRIVACY.md  RELEASE.md  SETUP.md
prompts/: end_detection.md  memory_extract.md  memory_extraction.md  proactive_candidate.md  response.md  session_summary.md  turn_analysis.md
scripts/: boot.sh  latency_summary.py  stt_faster_whisper.py  voicevox.sh
tests/: conftest.py  test_app_server.py  test_approval_requests.py  test_autonomous.py  test_autonomy_permission.py  test_cli_options.py  test_cli_runtime.py  test_drafts.py  test_latency.py  test_memory.py  test_mvp.py  test_pet.py  test_proactive.py  test_scenario_replay.py  test_session.py  test_session_resume_point.py  test_startup_briefing.py  test_tasks_daily_actions.py  test_turn_analysis.py  test_voice.py
(+25 files in other folders)
