[project]
name = "colleague-ai-terminal"
version = "0.1.0"
description = "Terminal MVP for a secretary-style AI assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "numpy>=1.26.0",
    "sounddevice>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", ".uv-cache", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
