[project]
name = "orbit-ai"
version = "0.1.0"
description = "Local-first terminal and voice personal AI assistant with inspectable memory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "shuto-S" }]
keywords = ["ai-agent", "local-first", "voice-assistant", "memory", "ollama", "codex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "faster-whisper>=1.1.0",
    "numpy>=1.26.0",
    "sounddevice>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/shuto-S/orbit-ai"
Repository = "https://github.com/shuto-S/orbit-ai"
Issues = "https://github.com/shuto-S/orbit-ai/issues"
Documentation = "https://github.com/shuto-S/orbit-ai#readme"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", ".uv-cache", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
